--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -5,21 +5,21 @@
     >
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       @if (accountService.currentUser()) {
-        <li class="nav-item">
-          <a routerLink="/members" routerLinkActive="active" class="nav-link"
-            >Matches</a
-          >
-        </li>
-        <li class="nav-item">
-          <a routerLink="/lists" routerLinkActive="active" class="nav-link"
-            >Lists</a
-          >
-        </li>
-        <li class="nav-item">
-          <a routerLink="/messages" routerLinkActive="active" class="nav-link"
-            >Messages</a
-          >
-        </li>
+      <li class="nav-item">
+        <a routerLink="/members" routerLinkActive="active" class="nav-link"
+          >Matches</a
+        >
+      </li>
+      <li class="nav-item">
+        <a routerLink="/lists" routerLinkActive="active" class="nav-link"
+          >Lists</a
+        >
+      </li>
+      <li class="nav-item">
+        <a routerLink="/messages" routerLinkActive="active" class="nav-link"
+          >Messages</a
+        >
+      </li>
       }
       <li class="nav-item">
         <a routerLink="/errors" routerLinkActive="active" class="nav-link"
@@ -31,10 +31,10 @@
     @if (accountService.currentUser()) {
     <div dropdown class="dropdown">
       <a dropdownToggle class="dropdown-toggle text-light text-decoration-none"
-        >Welcome {{ accountService.currentUser()?.username | titlecase}}
+        >Welcome {{ accountService.currentUser()?.username | titlecase }}
       </a>
       <div *dropdownMenu class="dropdown-menu">
-        <a href="" class="dropdown-item">Edit profile</a>
+        <a routerLink="/member/edit" class="dropdown-item">Edit profile</a>
         <div class="dropdown-divider"></div>
         <a href="" class="dropdown-item" (click)="logout()">Logout</a>
       </div>
