--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -39,7 +39,12 @@
         </div>
       </div>
       <div class="card-footer">
-        <button [disabled]="!editForm.dirty" form="editForm" type="submit" class="btn btn-success col-12">
+        <button
+          [disabled]="!editForm.dirty"
+          form="editForm"
+          type="submit"
+          class="btn btn-success col-12"
+        >
           Save changes
         </button>
       </div>
@@ -90,7 +95,9 @@
           </div>
         </form>
       </tab>
-      <tab heading="Edit photos"> Edit photo go here </tab>
+      <tab heading="Edit photos">
+        <app-photo-editor [member]="member" (memberChange)="onMemberChange($event)"></app-photo-editor>
+      </tab>
     </tabset>
   </div>
 </div>
