--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -15,10 +15,18 @@
         </button>
       </li>
       <li class="list-inline-item">
-        <button (click)="toggleLike()" class="btn btn-primary"><i class="fa fa-heart"></i></button>
+        <button (click)="toggleLike()" class="btn btn-primary">
+          <i class="fa fa-heart"></i>
+        </button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
+        <button
+          routerLink="/members/{{ member().userName }}"
+          [queryParams]="{ tab: 'Messages' }"
+          class="btn btn-primary"
+        >
+          <i class="fa fa-envelope"></i>
+        </button>
       </li>
     </ul>
   </div>
@@ -27,7 +35,7 @@
       <i class="fa fa-user me-2"></i>
       {{ member().knownAs }}, {{ member().age }}
       @if (hasLiked()) {
-        <i class="fa fa-heart ms-2" style="color: red;"></i>
+      <i class="fa fa-heart ms-2" style="color: red"></i>
       }
     </h6>
     <p class="card-text text-muted text-center">{{ member().city }}</p>
